--- a/resources.qrc
+++ b/resources.qrc
@@ -3,5 +3,6 @@
         <file alias="background.png">graphics/background.png</file>
         <file alias="swordsman.png">graphics/swordsman.png</file>
         <file alias="house.png">graphics/house.png</file>
+        <file alias="dragon.png">graphics/gragon.png</file>
     </qresource>
 </RCC>
