--- a/resources.qrc
+++ b/resources.qrc
@@ -5,5 +5,6 @@
         <file alias="house.png">graphics/house.png</file>
         <file alias="dragon.png">graphics/gragon.png</file>
         <file alias="order-button.png">graphics/order-button.png</file>
+        <file alias="miner.png">graphics/miner.png</file>
     </qresource>
 </RCC>
