--- a/resources.qrc
+++ b/resources.qrc
@@ -4,5 +4,6 @@
         <file alias="swordsman.png">graphics/swordsman.png</file>
         <file alias="house.png">graphics/house.png</file>
         <file alias="dragon.png">graphics/gragon.png</file>
+        <file alias="order-button.png">graphics/order-button.png</file>
     </qresource>
 </RCC>
